An attempt to repair the encoding mess a bit, when attaching files:

- Don't set the charset to us-ascii if it couldn't be found
- Give up on KEncodingProber, it doesn't work reliable enough.
  Instead, add an encoding combobox to the file dialog.
  Now it is the user's fault if the encoding is not correct :)
- Don't attempt to set a charset for a non-textual mimetype
- Don't show an empty string for the mimetype

BUG: 64815

svn path=/trunk/KDE/kdepim/libkdepim/; revision=888149